# fastsaas

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  run_dev.sh  run_test.sh
backend/: alembic.ini  openapi.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_rls_policies.py  0003_magic_link_tokens.py  0004_orgs_slugs_and_member_rls.py  0005_org_invitations.py  0006_project_shares.py  0007_org_invitations_dpo_role.py  0008_actors_platform_staff.py
backend/src/fastsaas/: __init__.py  config.py  db.py  main.py
backend/src/fastsaas/admin/: __init__.py  dependencies.py  schemas.py
backend/src/fastsaas/api/: __init__.py  admin.py  audit.py  auth.py  orgs.py  projects.py  search.py
backend/src/fastsaas/audit/: CLAUDE.md  __init__.py  context.py  intent.py  middleware.py  mixin.py  models.py  redact.py  (+2 more)
backend/tests/: conftest.py  test_api_admin.py  test_api_auth.py  test_api_members.py  test_api_orgs.py  test_api_project_shares.py  test_api_projects.py  test_api_search.py  test_audit_integration.py  test_audit_intent.py  test_audit_mixin.py  test_audit_redact.py  test_audit_scrub.py  test_audit_scrub_integration.py  test_authz_bundles.py  test_health.py  test_identity_email.py  test_identity_jwt.py  test_identity_magic_link.py  test_identity_models.py  test_identity_oauth_providers.py  test_identity_oauth_state.py  test_identity_password.py  test_identity_refresh.py  test_orgs_service.py  test_search_unit.py  test_tenants_context.py  test_tenants_slugs.py
(+275 files in other folders)
