[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastsaas"
version = "0.0.1"
description = "FastSaaS — open-source SaaS starter-kit backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlmodel>=0.0.22",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic[email]>=2.9",
    "pydantic-settings>=2.6",
    "arq>=0.26",
    "uuid-utils>=0.10",
    "authlib>=1.3",
    "joserfc>=1.0",
    "passlib[argon2]>=1.7.4",
    "aiosmtplib>=3.0",
    "jinja2>=3.1",
    "redis>=5.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fastsaas"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "RUF"]
ignore = ["E501"]
